<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusable="false">

    <TextView android:text="@string/sMVCounter" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sTitle"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/buttonOK"
        android:layout_alignStart="@+id/buttonOK" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:width="250dp"
        android:visibility="visible"
        android:theme="@style/AppTheme"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:hint="@string/sHint"
        android:height="300dp"
        android:layout_alignBottom="@+id/buttonMinus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/buttonPlus"
        android:layout_alignRight="@+id/buttonOK"
        android:layout_alignEnd="@+id/buttonOK" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPlus"
        android:id="@+id/buttonPlus"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_above="@+id/buttonMinus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sMinus"
        android:id="@+id/buttonMinus"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/buttonPlus"
        android:layout_alignStart="@+id/buttonPlus" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sSave"
        android:id="@+id/buttonOK"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="93dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/index_Name"
        android:layout_below="@+id/sTitle"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:gravity="start"
        android:spinnerMode="dialog"
        android:layout_alignParentLeft="true"
        android:focusable="true"
        android:layout_toLeftOf="@+id/buttonNewIndex"
        android:layout_toStartOf="@+id/buttonNewIndex" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sNew"
        android:id="@+id/buttonNewIndex"
        android:singleLine="true"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/index_Name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
