<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mv_lab.mv_counter.IndexCreator">

    <TextView android:text="@string/indexCreation" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indexCreationTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newIndexName"
        android:layout_below="@+id/indexCreationTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/newIndexHint"
        android:textSize="25sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sOK"
        android:id="@+id/buttonOK"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
